feat: have added item & category models, item seeder, 2 migration. Have added item and category routers, have added item & category controllers

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -15,12 +15,15 @@
               <h2 class="text-center border-bottom">Компьютерные запчасти</h2>
             </div>
           </div>
+          
+
           <div class="row">
-            <div class="col-sm-4 mt-3">
+            <% for (let i = 0; i < items.length; i++) {%>
+              <div class="col-sm-4 mt-3">
               <div class="card">
                 <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title"><%= items[i].title %></h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                   <p class="card-text">
                     <small class="text-muted">Last updated 3 mins ago</small>
@@ -28,66 +31,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4 mt-3">
-              <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4 mt-3">
-              <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4 mt-3">
-              <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4 mt-3">
-              <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4 mt-3">
-              <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
+              
+            <% } %>
+            
+            
 
           </div>
           
