--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -57,8 +57,7 @@
           aria-label="Search"
           aria-describedby="search-addon"
           />
-          <span class="input-group-text text-black border-0" id="search-addon">
-          Search
+          <span class="input-group-text fa fa-search fa-2x " id="search-addon">
           </span>
         </form>
         <div class="dropdown">
