created a search form with some filters

--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -3,7 +3,7 @@
   <!-- Container wrapper -->
   <div class="container py-1">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="https://mdbgo.com/">
+    <a class="navbar-brand me-2" href="/">
       Компьютерный магазин
     </a>
 
@@ -34,32 +34,6 @@
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
-        <button type="button" class="btn btn-link px-3 me-2">
-          Login
-        </button>
-        <button type="button" class="btn btn-primary me-3">
-          Sign up for free
-        </button>
-        <a></a>
-      </div>
-    </div>
-    <!-- Collapsible wrapper -->
-  </div>
-  </nav>
-  <!-- Search -->
-    <nav class="navbar navbar-dark bg-warning ">
-      <div class="container-fluid">
-        <form class="d-flex input-group w-auto">
-          <input
-          type="search"
-          class="form-control rounded"
-          placeholder="Search"
-          aria-label="Search"
-          aria-describedby="search-addon"
-          />
-          <span class="input-group-text fa fa-search fa-2x " id="search-addon">
-          </span>
-        </form>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
           Каталог
@@ -70,6 +44,17 @@
             <% } %>
           </ul>
         </div>
+        <button type="button" class="btn btn-link px-3 me-2">
+          Логин
+        </button>
+        <button type="button" class="btn btn-link me-3">
+          Регистрация
+        </button>
+        <a></a>
       </div>
-    </nav>
+    </div>
+    <!-- Collapsible wrapper -->
+  </div>
+  </nav>
+    
   </header>
