--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -5,9 +5,70 @@
     <div class="container py-3">
       <%- include('partials/header'); %>
       <main>
-      
-        <div class="container py-3">
-          <!--SLIDER-->
+          
+          <!-- Search -->
+          <div class="search-filter">
+            
+            <nav class="navbar navbar-dark bg-warning ">
+              <div class="container-fluid">
+                <form class="row g-3" action="/" method="get">
+                  <div class="col-md-11">
+                    <label for="inputSearch" class="form-label">Поиск</label>
+                    <input name="search" type="search" class="form-control" id="inputSearch">
+                  </div>
+                  <div class="col-md-1">
+                    <span class="input-group-text fa fa-search fa-2x mt-4 " id="search-addon">
+                    </span>
+                  </div>
+                  <div class="col-md-3">
+                    <label for="inputPriceFrom" class="form-label">Цена от</label>
+                    <input name="priceFrom" type="number" name="priceFrom" class="form-control" id="inputPriceFrom">
+                  </div>
+                  <div class="col-md-3">
+                    <label for="inputPriceTo" class="form-label">Цена до</label>
+                    <input name="priceTo" type="number" class="form-control" id="inputPriceTo">
+                  </div>
+                  <div class="col-md-3">
+                    <label for="select-categories" class="form-label select-sort me-3">Категория</label>
+                    <select name="category" class="form-select select-sort" id="select-categories">
+                      <%  for(let i = 0; i < categories.length; i++) { %>
+                        <option value=<%= categories[i].title %>><%= categories[i].title %></option>
+                      <% } %>
+                      <option value="" selected="true">Все</option>
+                    </select>
+                  </div>
+                  <div class="col-md-3">
+                    <label for="select-sort" class="form-label me-3">Сортировка по</label>
+                    <select name="sort" class="form-select" id="select-sort">
+                      <option value="price-ASC">Сначала дешёвые</option>
+                      <option value="price-DESC">Сначала дорогие</option>
+                      <option value="createdAt-DESC">По дате</option>
+                    </select>
+                  </div>
+                  <div class="col-md-12">
+                    <h3 class="form-label">По каким компаниям искать</h3>
+                    
+                  </div>
+                  
+                    <% for(let i = 0; i < companies.length; i++) { %>
+                      <div class="col-md-2">
+                        <div class="form-check">
+                          <input name="companies[]" value=<%= companies[i].title %> class="form-check-input" type="checkbox" id=<%= companies[i].title %>>
+                          <label class="form-check-label" for=<%= companies[i].title %>><%= companies[i].title %></label> 
+                        </div>
+                      </div>
+                    <% } %>
+                
+
+                  <div class="col-md-12 text-center">
+                    <button type="submit" class="btn btn-primary">Запрос</button>
+                  </div>
+                </form>
+              </div>
+            </nav>
+            
+          </div>
+          
           
           <!--CONTENT-->
           <div class="row">
@@ -51,8 +112,9 @@
 
           </div>
           
-        </div>
       </main>
+    
+      
       <!-- Footer -->
       <%- include('partials/footer'); %>
     </div>
