--- a/templates/itemPage.ejs
+++ b/templates/itemPage.ejs
@@ -49,7 +49,7 @@
               
                           <div class="d-flex justify-content-between">
                             <div class="d-flex flex-row align-items-center">
-                              <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp" alt="avatar" width="25"
+                              <img src=<%= comments[i].user.imgPath %> alt="avatar" width="25"
                                 height="25" />
                               <p class="small mb-0 ms-2"><%= comments[i].user.email %></p>
                             </div>
