feat: Created a registration & login forms

--- a/templates/partials/head.ejs
+++ b/templates/partials/head.ejs
@@ -6,12 +6,11 @@
     <meta name="generator" content="Hugo 0.88.1">
     <title>Animal blog </title>
     <link rel="stylesheet" href="./../../public/css/style.css" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="./../../public/assets/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="./../../public//assets//font-awesome/css/font-awesome.min.css">
-    <script src="./../../public/assets/dist/js/bootstrap.min.js"></script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <script src="./../../public/assets//dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script src="./../../public/assets/dist/js/bootstrap.bundle.min.js"></script>
     
   </head>
