--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -34,13 +34,16 @@
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
-        <button type="button" class="btn btn-link px-3 me-2">
-          Логин
-        </button>
-        <button type="button" class="btn btn-link me-3">
-          Регистрация
-        </button>
-        <a></a>
+        <a href="/auth">
+          <button type="button" class="btn btn-link px-3 me-2">
+            Логин
+          </button>
+        </a> 
+        <a href="/regist">
+          <button type="button" class="btn btn-link me-3">
+            Регистрация
+          </button>
+        </a>
       </div>
     </div>
     <!-- Collapsible wrapper -->
