--- a/templates/regist_login.ejs
+++ b/templates/regist_login.ejs
@@ -22,13 +22,13 @@
                         <form action="/auth" method="post">
                             <!-- Email input -->
                             <div class="form-outline mb-4">
-                              <input type="email" required id="form2Example1" class="form-control" />
+                              <input type="email" name="username" required id="form2Example1" class="form-control" />
                               <label class="form-label" for="form2Example1">Почта</label>
                             </div>
                           
                             <!-- Password input -->
                             <div class="form-outline mb-4">
-                              <input type="password"  id="form2Example2" class="form-control" required minlength="6"/>
+                              <input type="password" name="password" id="form2Example2" class="form-control" required minlength="6"/>
                               <label class="form-label" for="form2Example2">Пароль</label>
                             </div>
                           
