--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -33,18 +33,36 @@
       </ul>
       <!-- Left links -->
 
-      <div class="d-flex align-items-center">
-        <a href="/auth">
-          <button type="button" class="btn btn-link px-3 me-2">
-            Логин
-          </button>
-        </a> 
-        <a href="/regist">
-          <button type="button" class="btn btn-link me-3">
-            Регистрация
-          </button>
-        </a>
+      <% if(!locals.user) { %>
+        <div class="d-flex align-items-center">
+          <a href="/auth">
+            <button type="button" class="btn btn-link px-3 me-2">
+              Логин
+            </button>
+          </a> 
+          <a href="/regist">
+            <button type="button" class="btn btn-link me-3">
+              Регистрация
+            </button>
+          </a>
+        </div>
+      <% } %>
+
+      <% if(locals.user) { %>
+        <div class="nav-item nav-user">
+          <div class="dropdown">
+              <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src=<%= user.avatar %> alt="" width="35" style="border: radius 50%;">  
+                <%= user.email || user.name || user.username %>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">My profile</a></li>
+                  <li><a class="dropdown-item" href="#">Edit profile</a></li>
+                  <li><a class="dropdown-item" href="#">Logout</a></li>
+              </ul>
+          </div>
       </div>
+      <% } %>
     </div>
     <!-- Collapsible wrapper -->
   </div>
