--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -58,7 +58,7 @@
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li><a class="dropdown-item" href="#">My profile</a></li>
                   <li><a class="dropdown-item" href="#">Edit profile</a></li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
               </ul>
           </div>
       </div>
