--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -56,9 +56,9 @@
                 <%= user.email || user.name || user.username %>
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">My profile</a></li>
+                  <li><a class="dropdown-item" href="/profile">Мой профиль</a></li>
                   <li><a class="dropdown-item" href="#">Edit profile</a></li>
-                  <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
+                  <li><a class="dropdown-item" href="/auth/logout">Выйти</a></li>
               </ul>
           </div>
       </div>
