fix:wrong route in home template

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -84,7 +84,7 @@
               <div class="card border-primary">
                 <img src=<%= items[i].imgPath %> class="card-img-top" alt="Palm Springs Road"/>
                 <div class="card-body">
-                  <a href=<%= `/items/${items[i].id}` %>><h5 class="card-title"><%= items[i].title %></h5></a>
+                  <a href=<%= `/items/get/${items[i].id}` %>><h5 class="card-title"><%= items[i].title %></h5></a>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
 
                   <div class="btn-group shadow-0" role="group" aria-label="Basic example">
