feat: a few visual changes(add logout icon to the header, changed button's style in Item page

--- a/templates/itemPage.ejs
+++ b/templates/itemPage.ejs
@@ -44,7 +44,7 @@
                   <input name="commentUserId" type="text"  value=<%=user.id%> placeholder="..." class="form-control" hidden>
                   <input name="commentItemId" type="text" value=<%=item.id%>  placeholder="..." class="form-control" hidden>
                   <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-primary">Добавить</button>
+                    <button type="submit" class="btn btn-outline-dark px-3" style="color:rgb(246, 135, 56)">Добавить</button>
                   </div>
                 </form>
               </div>
