--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -57,8 +57,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li><a class="dropdown-item" href="/profile">Мой профиль</a></li>
-                  <li><a class="dropdown-item" href="#">Edit profile</a></li>
-                  <li><a class="dropdown-item" href="/auth/logout">Выйти</a></li>
+                  <li><a class="dropdown-item" href="/auth/logout">Выйти <i class="fa fa-sign-out ms-1" aria-hidden="true"></i></a></li>
               </ul>
           </div>
       </div>
