--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -2,14 +2,14 @@
 <html lang="en">
   <%- include('partials/head'); %>
   <body>
-    <div class="container py-3">
+    <div class="container py-3 bg-light">
       <%- include('partials/header'); %>
       <main>
           
           <!-- Search -->
-          <div class="search-filter">
+          <div class="search-filter mt-2">
             
-            <nav class="navbar navbar-dark bg-warning ">
+            <nav class="navbar navbar-dark bg-light border-dark border-bottom border-top rounded">
               <div class="container-fluid">
                 <form class="row g-3" action="/" method="get">
                   <div class="col-md-11">
@@ -21,7 +21,7 @@
                     </span>
                   </div>
                   <div class="col-md-3">
-                    <label for="inputPriceFrom" class="form-label">Цена от</label>
+                    <label for="inputPriceFrom" class="form-label text-muted">Цена от</label>
                     <input name="priceFrom" type="number" name="priceFrom" class="form-control" id="inputPriceFrom">
                   </div>
                   <div class="col-md-3">
@@ -61,7 +61,7 @@
                 
 
                   <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-primary">Запрос</button>
+                    <button type="submit" class="btn btn-outline-secondary px-4 btn-dark text-light">Запрос</button>
                   </div>
                 </form>
               </div>
@@ -73,7 +73,7 @@
           <!--CONTENT-->
           <div class="row">
             <div class="col-sm-12">
-              <h2 class="text-center border-bottom">Компьютерные запчасти</h2>
+              <h2 class="text-center border-bottom bg-light mt-3">Товары: <%= items.length %></h2>
             </div>
           </div>
           
@@ -81,18 +81,18 @@
           <div class="row">
             <% for (let i = 0; i < items.length; i++) {%>
               <div class="col-sm-4 mt-3">
-              <div class="card border-primary">
-                <img src=<%= items[i].imgPath %> class="card-img-top" alt="Palm Springs Road"/>
+              <div class="card border-dark">
+                <img src=<%= items[i].imgPath %> height="315px" class="card-img-top" alt="Item's image"/>
                 <div class="card-body">
-                  <a href=<%= `/items/get/${items[i].id}` %>><h5 class="card-title"><%= items[i].title %></h5></a>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <a class=" fs-5 text-dark bg-light" href=<%= `/items/get/${items[i].id}` %>><%= items[i].title %></a>
+                  <p class="card-text p-1 text-secondary">This card has supporting text below as a natural lead-in to additional content.</p>
 
                   <div class="btn-group shadow-0" role="group" aria-label="Basic example">
                     <button type="button" class="btn btn-outline-secondary" data-mdb-color="dark">
-                        <a href="#"><%= items[i].price %>&#8381</a>
+                        <a href="#" class="text-decoration-none text-dark"><%= items[i].price %><span class="text-dark ms-1">&#8381</span></a>
                     </button>
                     <button type="button" class="btn btn-outline-secondary" data-mdb-color="dark">
-                        <a href="#"><i class="fa fa-heart-o text-danger" aria-hidden="true"></i><span class="p-1">1</span></a>
+                        <a href="#" class="text-decoration-none"><i class="fa fa-heart-o text-danger" aria-hidden="true"></i><span class="p-1">1</span></a>
                     </button>
                     <button type="button" class="btn btn-outline-secondary" data-mdb-color="dark">
                         Купить
@@ -100,7 +100,7 @@
                   </div>
                 </div>
                 <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                  <small class="text-muted"><i class="fa fa-clock-o text-dark"></i> <%= moment(items[i].createdAt).format('LLLL')%></small>
                 </div>
                 
               </div>
