--- a/templates/itemPage.ejs
+++ b/templates/itemPage.ejs
@@ -5,11 +5,10 @@
     <div class="container py-3 bg-light">
       <%- include('partials/header'); %>
       <main>
-        ABOBA
         <div class="row p-5 justify-content-center">
           <div class="col-md-8">
             <div class="card border-dark">
-              <img src=<%= item.imgPath %> height="500px" class="card-img-top" alt="Item's image"/>
+              <img src=<%= item.imgPath %> height="550px" class="card-img-top" alt="Item's image"/>
               <div class="card-body">
                 <a class=" fs-5 text-dark bg-light" href=<%= `/items/get/${item.id}` %>><%= item.title %></a>
                 <p class="card-text p-1 text-secondary">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -28,17 +27,17 @@
               
             </div>
           </div>
-          <div class="col-md-6 text-center">
+          <div class="col-md-6 text-center p-2 border-secondary border-bottom rounded">
               <div class="text-danger">
                 <form class="row g-3 bor" action="/comments/create" method="post">
                   <div class="col-md-12">
-                    <h4 class="text-center"> Добавить комментарий</h4>
+                    <h4 class="text-center pt-2"> Добавить комментарий</h4>
                   </div>
-                  <div class="col-md-12 justify-content-center">
-                    <input  name="commentText" type="text"  placeholder="..." class="form-control" id="inputItemName" required>
+                  <div class="col-md-12 justify-content-center px-4 border-dark border-top rounded">
+                    <input class="form-control" name="commentText" type="text"  placeholder="..."  id="inputItemName" required>
                   </div> 
-                  <input name="commentUserId" type="text"  value=<%=user.id%> placeholder="..." class="form-control" hidden>
-                  <input name="commentItemId" type="text" value=<%=item.id%>  placeholder="..." class="form-control" hidden>
+                  <input class="form-control" name="commentUserId" type="text"  value=<%=user.id%> placeholder="..."  hidden>
+                  <input class="form-control" name="commentItemId" type="text" value=<%=item.id%>  placeholder="..."  hidden>
                   <div class="col-md-12 text-center">
                     <button type="submit" class="btn btn-outline-dark px-3" style="color:rgb(246, 135, 56)">Добавить</button>
                   </div>
@@ -48,7 +47,7 @@
               
           </div>
           <div class="col-md-8">
-            <h2 class="text-center border-bottom">Комментарии</h2>
+            <h4 class="text-center border-bottom py-2">Комментарии: <span class="count"><%=item.comments.length%></span></h4>
           </div>
           <div class="col-md-12">
             <div class="row d-flex justify-content-center">
