fix:changed wron button's color

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -21,7 +21,7 @@
                     </span>
                   </div>
                   <div class="col-md-3">
-                    <label for="inputPriceFrom" class="form-label text-muted">Цена от</label>
+                    <label for="inputPriceFrom" class="form-label">Цена от</label>
                     <input name="priceFrom" type="number" name="priceFrom" class="form-control" id="inputPriceFrom">
                   </div>
                   <div class="col-md-3">
